# laboratorio-experimental

./: .gitignore  README.md  pyproject.toml
src/: exp-16.ipynb  exp_eletivo_pedro.ipynb  experimento-eletivo.ipynb  test.ipynb
src/utils/: linear.py  medicoes.py  multimeter.py
