[tool.poetry]
name = "laboratorio-experimental"
version = "0.1.0"
description = ""
authors = ["Lucas-GBP <lucas.bitencourte.pedroso@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.9.0"
pandas = "^2.2.2"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
